<resources>
    <string name="app_name">Expiry Date Guard</string>
    <string name="moja_lod_wka">Moja lodówka</string>
    <string name="nazwa_produktu">Nazwa produktu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="typ_produktu">Typ produktu</string>
    <string name="data_przydatno_ci">data przydatności</string>
    <string name="collapse_title">Twoja\nlodówka</string>
    <string name="przepisy_kulinarne">Przepisy kulinarne</string>
    <string name="wyszukaj_przepis_z_moimi_produktami">Wyszukaj przepisy zawierające moje produkty</string>
    <string name="moje_przepisy">Ulubione przepisy</string>
    <string name="ustawienia">Ustawienia</string>
    <string name="zmie_j_zyk">Zmień język</string>
    <string name="angielski">Angielski</string>
    <string name="polski">Polski</string>
    <string name="language_choice">Wybierz język</string>
    <string name="dodaj_nowy_produkt">Dodaj nowy produkt</string>
    <string name="data_przydatno_ci_do_spo_ycia">Data przydatności do spożycia:</string>
    <string name="typ_produktu_np_ketchup">Typ produktu (np. makaron)</string>
    <string name="nazwa_produku_np_marka">Nazwa produku (np. marka)</string>
    <string name="dd">DD</string>
    <string name="mm">MM</string>
    <string name="rrrr">RRRR</string>
    <string name="zapisz">Zapisz</string>
    <string name="skanuj_produkt">SKANUJ PRODUKT</string>
    <string name="brak_informacji_o_sk_adnikach">Brak informacji o składnikach</string>
    <string name="sk_adniki">Składniki:</string>
    <string name="brak_informacji_o_warto_ciach_od_ywczych">Brak informacji o wartościach odżywczych</string>
    <string name="warto_ci_od_ywcze_w_100g_produktu">Wartości odżywcze w 100g produktu:</string>
    <string name="edytuj_produkt">Edytuj produkt</string>
    <string name="jezyk_pl">Polski</string>
    <string name="jezyk_en">Angielski</string>
    <string name="cardview_tekst">Ilość wybranych produktów: </string>
    <string name="toast_brak_produktów">Musisz wybrać co najmniej 1 produkt!</string>
    <string name="info_button">Nie możesz dodać tego produktu do listy. Przejdź do szczegółów produktu, a następnie uzupełnij lub zmień typ produktu. Wypróbuj typy produktów proponowane przez aplikację.</string>
    <string name="delete_product_button">Czy na pewno chcesz usunąć ten produkt ze swojej lodówki?</string>
    <string name="main_menu_api_failed">Wystąpił problem z pobraniem przepisów. Wybierz inne produkty lub zmień preferencje żywieniowe.</string>
    <string name="brakuje_ci">Brakuje Ci</string>
    <string name="produktów">składników</string>
    <string name="no_recipies_found">Nie znaleziono przepisów zawierających podane składniki.</string>
    <string name="food_preferences">Preferencje żywieniowe</string>
    <string name="author">Autor: Bartosz Broda [Copyright (©)]</string>
    <string name="groceryApi">Wszelkie dane o zeskanowanych produktach pochodzą z serwisu OpenFoodFacts.org</string>
    <string name="recipeApi">Wszystkie przepisy pokazywane przez aplikację dostarczane są przez serwis Edamam.com </string>
    <string name="icons">Ikony pochodzą ze strony Icons8.com</string>
    <string name="dalle2">Grafiki zostały stworzone z pomocą DALL·E 2 - https://openai.com/dall-e-2</string>
    <string name="copyright">Copyright (©)</string>
</resources>