<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/author_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textSize="17sp"
        android:layout_marginHorizontal="10dp"/>
    <TextView
        android:id="@+id/groceryApi_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/groceryApi"
        android:autoLink="web"
        android:layout_below="@id/author_txt"
        android:layout_marginTop="10dp"
        android:textSize="17sp"
        android:layout_marginHorizontal="10dp"/>
    <TextView
        android:id="@+id/recipeApi_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipeApi"
        android:autoLink="web"
        android:layout_below="@id/groceryApi_txt"
        android:layout_marginTop="10dp"
        android:textSize="17sp"
        android:layout_marginHorizontal="10dp"/>
    <TextView
        android:id="@+id/icons_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/icons"
        android:layout_below="@id/recipeApi_txt"
        android:layout_marginTop="10dp"
        android:autoLink="web"
        android:textSize="17sp"
        android:layout_marginHorizontal="10dp"/>

    <TextView
        android:id="@+id/dalle2_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dalle2"
        android:layout_below="@id/icons_txt"
        android:layout_marginTop="10dp"
        android:autoLink="web"
        android:textSize="17sp"
        android:layout_marginHorizontal="10dp"/>

    <TextView
        android:id="@+id/copyright_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="5dp"
        android:autoLink="web"
        android:visibility="gone"
        android:text="@string/copyright"
        android:textSize="17sp" />



</RelativeLayout>