<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.ProductScreenActivity">

    <ProgressBar
        android:id="@+id/load_proressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorPrimary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="start"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/product_name_product_screen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/product_name_product_screen" />

    <ProgressBar
        android:id="@+id/image_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/product_image"
        app:layout_constraintEnd_toEndOf="@+id/product_image"
        app:layout_constraintStart_toStartOf="@+id/product_image"
        app:layout_constraintTop_toTopOf="@+id/product_image"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/product_name_product_screen"
        android:text=""
        android:gravity="center"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:maxHeight="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/product_image"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/product_name_product_screen_edittext"
        android:text=""
        android:gravity="center"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="16dp"
        android:inputType="text|textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/product_image"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:foregroundGravity="bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_name_product_screen">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="250dp">

            <TextView
                android:id="@+id/product_type_textview_productscreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/product_type_edittext_productscreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/typ_produktu"
                app:layout_constraintBottom_toTopOf="@+id/product_type_textview_productscreen"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/expiry_date_textview_product_screen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_type_textview_productscreen" />

            <EditText
                android:id="@+id/expiry_date_year_edittext_product_screen"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:hint="@string/rrrr"
                android:maxLength="4"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_type_textview_productscreen" />

            <EditText
                android:id="@+id/expiry_date_month_edittext_product_screen"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:hint="@string/mm"
                android:text=""
                android:maxLength="2"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/expiry_date_year_edittext_product_screen"
                app:layout_constraintTop_toBottomOf="@+id/product_type_textview_productscreen" />

            <EditText
                android:id="@+id/expiry_date_day_edittext_product_screen"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:hint="@string/dd"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:visibility="gone"
                android:maxLength="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/expiry_date_month_edittext_product_screen"
                app:layout_constraintTop_toBottomOf="@+id/product_type_textview_productscreen" />

            <TextView
                android:id="@+id/ingredients_textview_product_screen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:text="@string/brak_informacji_o_sk_adnikach"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/expiry_date_textview_product_screen" />


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/sk_adniki"
                app:layout_constraintBottom_toTopOf="@+id/ingredients_textview_product_screen"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/data_przydatno_ci_do_spo_ycia"
                app:layout_constraintBottom_toTopOf="@+id/expiry_date_textview_product_screen"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/nutrition_textview_product_screen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:text="@string/brak_informacji_o_warto_ciach_od_ywczych"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ingredients_textview_product_screen" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/warto_ci_od_ywcze_w_100g_produktu"
                app:layout_constraintBottom_toTopOf="@+id/nutrition_textview_product_screen"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/edit_product_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/rounded_background_gray"
                android:padding="10dp"
                android:text="@string/edytuj_produkt"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nutrition_textview_product_screen" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ImageButton
        android:id="@+id/approve_editing_product_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:cropToPadding="true"
        android:src="@drawable/ic_outline_check_green"
        android:layout_marginStart="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/rounded_background_gray"
        android:visibility="gone"/>

    <ImageButton
        android:id="@+id/cancel_editing_product_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/ic_cancel_outline_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_background_gray"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>